# CMakeList.txt : CMake project for template-Practice, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("template-Practice")

# Add source to this project's executable.
add_executable (template-Practice "template-Practice-test.cpp" "template-Practice.hpp")

# TODO: Add tests and install targets if needed.
